--- a/public/partials/principal.html
+++ b/public/partials/principal.html
@@ -5,8 +5,13 @@
 <div class="row">
     <div class="col-md-12">
         <form>
-            <input ng-model="filtro" ng-model-options="{debounce: 500}" 
-                   class="form-control" placeholder="filtrar"><!-- ng-model é bidirecional se alterar o valor aqui altera no controller, ng--model-options debounce é para ele atualizar o valor com um delay de 500 milisegundos -->
+            <div class="input-group">
+                <span class="input-group-btn">
+                    <a href="/#/fotos/new" class="btn btn-primary">Nova Foto</a>
+                </span>
+                <input ng-model="filtro" ng-model-options="{debounce: 500}" 
+                       class="form-control" placeholder="filtrar"><!-- ng-model é bidirecional se alterar o valor aqui altera no controller, ng--model-options debounce é para ele atualizar o valor com um delay de 500 milisegundos -->
+            </div>
         </form>
     </div>
 </div>
@@ -16,7 +21,8 @@
     <meu-painel ng-repeat="foto in fotos| filter: filtro"
                 titulo="{{foto.titulo}}" 
                 class="col-md-2 painel-animado">
-        <img class="img-responsive center-block" src="{{foto.url}}" alt="{{foto.titulo}}">
+        <minha-foto url="{{foto.url}}" titulo="{{foto.titulo}}"></minha-foto>
+
     </meu-painel>      
     <!-- fimdo panel -->  
 </div>
