--- a/public/partials/foto.html
+++ b/public/partials/foto.html
@@ -4,15 +4,24 @@
     <h1>{{foto.titulo}}</h1>
 </div>
 
-<form name="formulario" class="row" ng-submit="submeter()"><!-- Captura o evento de submit com o angular e exutar a funcao submeter no controller -->
+<form novalidate name="formulario" class="row" ng-submit="submeter()"><!-- Captura o evento de submit com o angular e exutar a funcao submeter no controller -->
     <div class="col-md-6">
         <div class="form-group">
             <label>Título</label>
-            <input ng-model="foto.titulo" name="titulo" class="form-control">    
+            <input ng-model="foto.titulo" name="titulo" class="form-control" required ng-maxlength="20">
+            <span ng-show="formulario.$submitted && formulario.titulo.$error.required" class="form-control alert-danger">
+                Titulo Obrigatório
+            </span>
+            <span ng-show="formulario.$submitted && formulario.titulo.$error.maxlength" class="form-control alert-danger">
+                Deve ter no máximo 20 caracteres
+            </span>
         </div>
         <div class="form-group">
             <label>URL</label>
-            <input ng-model="foto.url" name="url" class="form-control">
+            <input ng-model="foto.url" name="url" class="form-control" required>
+            <span ng-show="formulario.$submitted && formulario.url.$error.required" class="form-control alert-danger">
+                Url Obrigatória
+            </span>
         </div>
         <div class="form-group">
             <label>Descrição</label>
