--- a/public/partials/foto.html
+++ b/public/partials/foto.html
@@ -4,6 +4,8 @@
     <h1>{{foto.titulo}}</h1>
 </div>
 
+<p ng-show="mensagem.length" class="alert alert-info">{{mensagem}}</p><!-- no length 0 é false e todo outro número que nao for zero é true -->
+
 <form novalidate name="formulario" class="row" ng-submit="submeter()"><!-- Captura o evento de submit com o angular e exutar a funcao submeter no controller -->
     <div class="col-md-6">
         <div class="form-group">
@@ -29,10 +31,10 @@
             </textarea>
         </div>
 
-        <button type="submit" class="btn btn-primary">
+        <button type="submit" class="btn btn-primary" ng-disabled="formulario.$invalid">
             Salvar
         </button>
-         <a href="/" class="btn btn-primary">Voltar</a>
+         <a href="/#/fotos" class="btn btn-primary">Voltar</a>
         <hr>
     </div>
     <div class="col-md-6">
