--- a/public/partials/principal.html
+++ b/public/partials/principal.html
@@ -2,6 +2,9 @@
     <h1 class="text-center">Alurapic</h1>
 </div>
 
+<p ng-show="mensagem.length" class="alert alert-info">{{mensagem}}</p><!-- no length 0 é false e todo outro número que nao for zero é true -->
+
+
 <div class="row">
     <div class="col-md-12">
         <form>
@@ -22,7 +25,8 @@
                 titulo="{{foto.titulo}}" 
                 class="col-md-2 painel-animado">
         <minha-foto url="{{foto.url}}" titulo="{{foto.titulo}}"></minha-foto>
-
+        <a href="" class="btn btn-primary btn-block">Editar</a>
+        <button ng-click="remover(foto)" class="btn btn-danger btn-block">Remover</button>
     </meu-painel>      
     <!-- fimdo panel -->  
 </div>
