Editando fotos da lista com angular

--- a/public/partials/principal.html
+++ b/public/partials/principal.html
@@ -25,7 +25,7 @@
                 titulo="{{foto.titulo}}" 
                 class="col-md-2 painel-animado">
         <minha-foto url="{{foto.url}}" titulo="{{foto.titulo}}"></minha-foto>
-        <a href="" class="btn btn-primary btn-block">Editar</a>
+        <a href="/#/fotos/edit/{{foto._id}}" class="btn btn-primary btn-block">Editar</a>
         <button ng-click="remover(foto)" class="btn btn-danger btn-block">Remover</button>
     </meu-painel>      
     <!-- fimdo panel -->  
