--- a/public/partials/principal.html
+++ b/public/partials/principal.html
@@ -26,7 +26,7 @@
                 class="col-md-2 painel-animado">
         <minha-foto url="{{foto.url}}" titulo="{{foto.titulo}}"></minha-foto>
         <a href="/#/fotos/edit/{{foto._id}}" class="btn btn-primary btn-block">Editar</a>
-        <button ng-click="remover(foto)" class="btn btn-danger btn-block">Remover</button>
+        <meu-botao-perigo acao="remover(foto)" nome="Remover"></meu-botao-perigo>
     </meu-painel>      
     <!-- fimdo panel -->  
 </div>
